# webpv

./: .gitignore  GETTING-STARTED.md  README.md  TECHNICAL-SPECS.md  build-prod.sh  docker-compose.yml  eslint.config.js  index.html  install.sh  package-lock.json  package.json  start-dev.sh
.github/workflows/: ci.yml
backend/: .env.example  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  dependencies.py  health.py  route_planning.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  firestore_client.py  mssql_client.py  seed_firestore.py
backend/app/middleware/: error_handler.py  request_id.py  security.py
backend/app/schemas/: auth.py  common.py  route.py
backend/app/services/: auth_service.py  route_service.py
backend/tests/: conftest.py  test_auth.py  test_route_planning.py  test_security.py
docs/: backend-architecture.md  checklist_runbook.md  feedback.md  master_plan.md  work_plan.xlsx
docs/queries/: HOJA_DE_VISITA.sql  HOJA_DE_VISITA_v2.1.sql
frontend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.backup
frontend/docs/: Guía Técnica de Implementación Frontend (PWA React + Vite)-v1.0.docx  backlog.csv  master-plan.md  plan-and-wbs.md  propuesta-tecnica.docx
frontend/e2e/: example.spec.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+47 files in other folders)
